spacing fixes

--- a/!.css
+++ b/!.css
@@ -32,8 +32,8 @@ a{
 }
 
 hr.solid{
-  /* border-top: 3px solid #ffa500; */
-  border: 1px solid #ffa500;
+  border-top: 1px solid #ffa500;
+  border-bottom: none;
   background-color: #ffa500;
   margin-top: 2em;
   margin-bottom: 2em;
@@ -61,6 +61,10 @@ hr.solid{
   }
 
   br.onlysmall{
+    display: none;
+  }
+
+  hr.invis{
     display: none;
   }
 }
@@ -92,6 +96,19 @@ hr.solid{
     display: inline-block;
     margin-top: 12px;
     margin-bottom: 12px;
+  }
+
+  .br.onlysmall{
+    display:block;
+  }
+
+  hr.invis{
+    border-top: 1px solid #ffa500;
+    border-bottom: none;
+    background-color: #ffa500;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    visibility: hidden;
   }
 }
 
